--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "app/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/home/Context"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/home/Context", "src/components/home/createEvent.js", "src/components/home/createEvent.js", "src/components/home/testEvent.js"],
   "exclude": ["node_modules"]
 }
