--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
+    "@uploadthing/react": "^7.1.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "drizzle-kit": "^0.30.1",
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
     "heroicons": "^2.2.0",
@@ -26,7 +26,8 @@
     "next-auth": "^4.24.11",
     "pg": "^8.13.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uploadthing": "^7.4.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,6 +37,7 @@
     "@types/pg": "^8.11.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "sass": "^1.83.0",
